[package]
name = "h3-masque"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[features]
quictls = []

[dependencies]
anyhow = "1.0.80"
argh = "0.1.10"
bytes = "1.5.0"
h3 = "0.0.8"
h3-datagram = "0.0.2"
# h3-msquic-async = { git = "https://github.com/masa-koz/msquic-async-rs.git", branch = "masa-koz/address-discovery", features = ["datagram"] }
h3-msquic-async = { path = "../msquic-async-rs/h3-msquic-async", features = ["datagram"] }
http = "1"
rand = "0.8"
schannel = "0.1.27"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log"] }
url = "1"
futures = "0.3"
futures-concurrency = "7.6.3"
tempfile = "3.13.0"

[dev-dependencies]
